# rearview

./: .gitignore  CMakeLists.txt  README.md
data/: pltclusters.py  pltpts.py  unlabled_faces.txt
python/: change.py  label.py  snap.py  view.py
python/classify/: classify.py  mnist_pca.ipynb  pca.py
python/detect/: detect.py  label.py  snap.py
src/: CMakeLists.txt
src/capture/: CMakeLists.txt  capture.cpp
src/utils/: CMakeLists.txt  cellnn.h  dbscan.h  fixedradnn.h  kdtree.h  point.h
src/utils/test/: CMakeLists.txt  test_cellnn.cpp  test_dbscan.cpp  test_kdtree.cpp
